--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
 
 body {
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -25,10 +26,34 @@ body {
     margin: 20px 0px 0px 0px;
 }
 
+@media(max-width: 600px) {
+    .header {
+        font-size: 20px;
+    }
+}
+
 .paragraph {
     font-size: 15px;
     margin: 20px 0;
     width: 500px;
+}
+
+@media(max-width: 768px) {
+    .header {
+        margin: 10px auto;
+    }
+
+    .paragraph {
+        margin: 10px auto;
+    }
+}
+
+@media(max-width: 600px) {
+    .paragraph {
+        font-size: 13px;
+        width: 300px;
+        margin: 10px auto;
+    }
 }
 
 /*------boxes setup------*/
@@ -47,6 +72,35 @@ body {
     background-color: white;
 }
 
+@media(max-width: 1300px) {
+    .supervisor-box {
+        left: 13%;
+        width: 250px;
+        height: 170px;
+    }
+}
+
+@media(max-width: 990px) {
+    .supervisor-box {
+        top: 33%;
+        left: 17%;
+    }
+}
+
+@media(max-width: 600px) {
+    .supervisor-box {
+        top: 35%;
+        left: 20%;
+    }
+}
+
+@media(max-width: 320px) {
+    .supervisor-box {
+        left: 10%;
+    }
+}
+
+
 .supervisor-box h2 {
     font-size: 15px;
 }
@@ -62,6 +116,14 @@ body {
     height: 50px;
 }
 
+@media(max-width: 1300px) {
+    .supervisor-box img {
+        margin: 30px 0px 0px 170px;
+        width: 30px;
+        height: 30px;
+    }
+}
+
 .team-builder-box {
     position: absolute;
     top: 30%;
@@ -74,6 +136,35 @@ body {
     border-radius: 5px;
     box-shadow: 2px 10px 10px 1px rgb(214, 213, 213);
     background-color: white;
+}
+
+@media(max-width: 1300px) {
+    .team-builder-box {
+        top: 32%;
+        width: 250px;
+        height: 170px;
+    }
+}
+
+@media(max-width: 990px) {
+    .team-builder-box {
+        top: 33%;
+        left: 58%;
+    }
+}
+
+
+@media(max-width: 600px) {
+    .team-builder-box {
+        top: 73%;
+        left: 20%;
+    }
+}
+
+@media(max-width: 320px) {
+    .team-builder-box {
+        left: 10%;
+    }
 }
 
 .team-builder-box h2 {
@@ -91,6 +182,14 @@ body {
     height: 50px;
 }
 
+@media(max-width: 1300px) {
+    .team-builder-box img {
+        margin: 30px 0px 0px 170px;
+        width: 30px;
+        height: 30px;
+    }
+}
+
 .karma-box {
     position: absolute;
     top: 66%;
@@ -103,6 +202,33 @@ body {
     border-radius: 5px;
     box-shadow: 2px 10px 10px 1px rgb(214, 213, 213);
     background-color: white;
+}
+
+@media(max-width: 1300px) {
+    .karma-box {
+        width: 250px;
+        height: 170px;
+    }
+}
+
+@media(max-width: 990px) {
+    .karma-box {
+        top: 66%;
+        left: 17%;
+    }
+}
+
+@media(max-width: 600px) {
+    .karma-box {
+        top: 111%;
+        left: 20%;
+    }
+}
+
+@media(max-width: 320px) {
+    .karma-box {
+        left: 10%;
+    }
 }
 
 .karma-box h2 {
@@ -120,6 +246,14 @@ body {
     height: 50px;
 }
 
+@media(max-width: 1300px) {
+    .karma-box img {
+        margin: 30px 0px 0px 170px;
+        width: 30px;
+        height: 30px;
+    }
+}
+
 .calculator-box {
     position: absolute;
     top: 50%;
@@ -132,6 +266,34 @@ body {
     border-radius: 5px;
     box-shadow: 2px 10px 10px 1px rgb(214, 213, 213);
     background-color: white;
+}
+
+@media(max-width: 1300px) {
+    .calculator-box {
+        left: 65%;
+        width: 250px;
+        height: 170px;
+    }
+}
+
+@media(max-width: 990px) {
+    .calculator-box {
+        top: 66%;
+        left: 58%;
+    }
+}
+
+@media(max-width: 600px) {
+    .calculator-box {
+        top: 148%;
+        left: 20%;
+    }
+}
+
+@media(max-width: 320px) {
+    .calculator-box {
+        left: 10%;
+    }
 }
 
 .calculator-box h2 {
@@ -147,4 +309,12 @@ body {
     margin: 40px 0px 0px 210px;
     width: 50px;
     height: 50px;
+}
+
+@media(max-width: 1300px) {
+    .calculator-box img {
+        margin: 30px 0px 0px 170px;
+        width: 30px;
+        height: 30px;
+    }
 }
